<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:com.prismaqf.callblocker="http://schemas.android.com/apk/res-auto"
    tools:context="com.prismaqf.callblocker.EditCalendarRules">
    <item android:id="@+id/action_save"
        android:title="@string/mn_save_rule"
        android:icon="@drawable/ic_save_circle"
        android:orderInCategory="10"
        com.prismaqf.callblocker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_delete"
        android:title="@string/mn_delete_rule"
        android:icon="@drawable/ic_delete_circle"
        android:orderInCategory="20"
        com.prismaqf.callblocker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_change"
        android:title="@string/mn_change_rule"
        android:icon="@drawable/ic_change_circle"
        android:orderInCategory="30"
        com.prismaqf.callblocker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_undo"
        android:title="@string/mn_undo_rule"
        android:icon="@drawable/ic_undo_circle"
        android:orderInCategory="40"
        com.prismaqf.callblocker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_help"
        android:title="@string/mn_help"
        android:icon="@drawable/ic_help_circle"
        android:orderInCategory="50"
        com.prismaqf.callblocker:showAsAction="always"/>
    <item android:id="@+id/action_pick_calendar"
        android:title="@string/mn_pick_calendar"
        android:orderInCategory="100"
        android:visible="false"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_pick_patterns"
        android:title="@string/mn_pick_patterns"
        android:orderInCategory="110"
        android:visible="false"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_pick_action"
        android:title="@string/mn_pick_action"
        android:orderInCategory="120"
        android:visible="false"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_edit_calendar"
        android:title="@string/mn_edit_calendar"
        android:orderInCategory="130"
        android:visible="false"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_edit_patterns"
        android:title="@string/mn_edit_patterns"
        android:orderInCategory="140"
        android:visible="false"
        com.prismaqf.callblocker:showAsAction="never"/>
</menu>