...
    <string name="tx_Saturday">Saturday</string>
    <string name="tx_Sunday">Sunday</string>
    <string name="tx_all_days">All days</string>
    <string name="tx_no_days">No days</string>
    <string name="tx_work_days">Work days</string>
    <string name="tx_week_end">Week end</string>
    <string name="tx_from_time">From 00:00</string>
    <string name="tx_to_time">To 23:59</string>
    <string name="tx_rule_validation">Rule validation:</string>
    <string name="ac_edit_calendar_rule">Edit a calendar rule</string>
    <string name="ac_edit_filter_rule">Edit a filter rule</string>
    <string name="ac_edit_filter_patterns">Edit filter patterns</string>
    <string name="ac_pick_action">Pick an action</string>
    <string name="ac_edit_filter">Edit a filter</string>
...
